--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <img class="mobile-menu" src="./img/hamburger.svg" alt="hamburger" />
         </figure>
       </div>
-      <ul class="menu-section" style="">
+      <ul class="menu-section">
         <li class="menu-tab">
           <a href="#preparation">Co nas wyróżnia</a>
         </li>
@@ -60,7 +60,7 @@
     </nav>
     <main>
       <section class="section-background">
-        <div style="position: relative">
+        <div class="position-relative" ">
           <div class="first-section-padding margin-section">
             <div class="container gap-100 container-center flex-wrap">
               <div class="container">
@@ -110,8 +110,8 @@
                 opracowane we współpracy<br/> z lekarzami weterynarii, przynosza szybkie<br/> i zauważalne efekty, szczególnie
                 korzystne dla<br/> zwierząt z poważnymi problemami stawowymi.
               </p>
-              <div style="position: relative">
-                <figure style="position: absolute; left: -115px; bottom: 0;">
+              <div class="position-relative">
+                <figure class="position-absolute" style="left: -115px; bottom: 0;">
                   <img src="./img/flower-vector-left.svg" alt="flower-vector-left"/>
                 </figure>
                 <figure>
@@ -135,11 +135,11 @@
                   <p class="preparation-paragraph no-margin circle-paragraph">Zmieszany z karmą</p>
                 </div>
               </div>
-              <div style="position: relative; margin-top: 36px">
-                <figure style="position: absolute; left: -105px; bottom: -10px;">
+              <div class="position-relative" style="margin-top: 36px">
+                <figure class="position-absolute" style="left: -105px; bottom: -10px;">
                   <img src="./img/pets-vector-left.svg" alt="pets-vector-left"/>
                 </figure>
-                <figure style="position: absolute ; right: -60px ; top: 120px">
+                <figure class="position-absolute" style="right: -60px ; top: 120px">
                   <img src="./img/pets-vector-right.svg" alt="pets-vector-right"/>
                 </figure>
                 <figure class="width-360 no-margin">
@@ -151,17 +151,17 @@
               <h3 class="preparation-subtitle no-margin">Skuteczność -<br/> skoncentrowana dawka</h3>
               <div class="border-line"></div>
               <p class="preparation-paragraph">
-                <strong style="font-size: 20px; font-weight: normal">Tylko jedna porcja dziennie.</strong>
+                <strong class="fontSize-20 fontWeight-normal">Tylko jedna porcja dziennie.</strong>
               <br/>
                 To nie tylko wygoda, ale również gwarancja,<br/> że Twoje zwierzę otrzymuje wszystko, czego<br/> potrzebuje, aby
                 cieszyć się zdrowiem i aktywnością<br/> na długo. Skorzystaj z Arthrohard i zobacz<br/> różnicę w komforcie życia
                 swojego zwierzęcia.
               </p>
-              <div style="position: relative">
-                <figure style="position: absolute; left: -120px; bottom: 35px;">
+              <div class="position-relative">
+                <figure class="position-absolute" style="left: -120px; bottom: 35px;">
                   <img src="./img/syringe-vector-left.svg" alt="syringe-vector-left"/>
                 </figure>
-                <figure style="position: absolute ; right: -65px ; top: 115px">
+                <figure class="position-absolute" style="right: -65px ; top: 115px">
                   <img src="./img/syringe-vector-right.svg" alt="syringe-vector-right"/>
                 </figure>
                 <figure class="width-360 no-margin">
@@ -249,7 +249,7 @@
             </div>
             <div class="container container-column alignItems-center bottle-order">
               <div class="container container-column alignItems-center position-relative">
-                <figure style="margin: 0">
+                <figure class="no-margin" ">
                   <img class="bottle-img" src="./img/bottle.webp" alt="bottle" />
                 </figure>
                 <button class="composition-button position-absolute">Kup teraz</button>
