next fix after CR

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <img class="big-logo" src="./img/logo.svg" alt="logo"/>
               </figure>
               <div class="container-details">
-                <h2 class="promo-section-title">
+                <h2 class="promo-section-title text-gradient">
                   Lab-V Arthrohard Preparat<br/> na wsparcie stawów dla psa i kota
                 </h2>
                 <p class="promo-section-paragraph">Arthrohard to dobrze przyswajalny suplement diety w formie syropu,
@@ -88,18 +88,22 @@
       <figure class="small-vector-right">
         <img src="./img/small-vector-right.svg" alt="vector"/>
       </figure>
-      <figure class="no-margin">
+      <picture class="no-margin">
+        <source srcset="./img/mobile-vector-right-hero.svg" media="(max-width: 992px)">
+        <source srcset="./img/big-vector-right.svg">
         <img class="big-vector-right" src="./img/big-vector-right.svg" alt="vector"/>
-      </figure>
-      <figure class="no-margin">
+      </picture>
+      <picture class="no-margin">
+        <source srcset="./img/mobile-vector-left-hero.svg" media="(max-width: 992px)">
+        <source srcset="./img/big-vector-left.svg">
         <img class="big-vector-left" src="./img/big-vector-left.svg" alt="vector"/>
-      </figure>
+      </picture>
     </div>
   </div>
   <section id="preparation" class="section-background">
     <div class="preparation-section-padding margin-section">
       <div class="container container-column-center container-column">
-        <h3 class="preparation-title">Co wyróżnia nasz preparat</h3>
+        <h3 class="preparation-title text-gradient">Co wyróżnia nasz preparat</h3>
         <div class="border-line"></div>
       </div>
       <div class="container-preparation-details container-center flex-wrap">
@@ -115,12 +119,12 @@
           </p>
           <div class="position-relative border">
             <picture class="position-absolute flower-vector-left no-margin">
-              <source srcset="./img/big-vector-left.svg" media="(max-width: 992px)">
+              <source srcset="./img/mobile-vector-left.svg" media="(max-width: 992px)">
               <source srcset="./img/flower-vector-left.svg">
               <img class="vector-img" src="./img/flower-vector-left.svg" alt="flower-vector-left"/>
             </picture>
             <picture class="position-absolute flower-vector-right no-margin">
-              <source srcset="./img/big-vector-right.svg" media="(max-width: 992px)">
+              <source srcset="./img/mobile-vector-right.svg" media="(max-width: 992px)">
               <source srcset="./img/flower-vector-right.svg">
               <img class="vector-img" src="./img/flower-vector-right.svg" alt="flower-vector-right"/>
             </picture>
@@ -144,12 +148,12 @@
           </div>
           <div class="position-relative border" style="margin-top: 36px">
             <picture class="position-absolute pets-vector-left no-margin">
-              <source srcset="./img/big-vector-left.svg" media="(max-width: 992px)">
+              <source srcset="./img/mobile-vector-left.svg" media="(max-width: 992px)">
               <source srcset="./img/pets-vector-left.svg">
               <img class="vector-img" src="./img/pets-vector-left.svg" alt="pets-vector-left"/>
             </picture>
             <picture class="position-absolute pets-vector-right no-margin">
-              <source srcset="./img/big-vector-right.svg" media="(max-width: 992px)">
+              <source srcset="./img/mobile-vector-right.svg" media="(max-width: 992px)">
               <source srcset="./img/pets-vector-right.svg">
               <img class="vector-img" src="./img/pets-vector-right.svg" alt="pets-vector-right"/>
             </picture>
@@ -162,7 +166,7 @@
           <h3 class="preparation-subtitle no-margin">Skuteczność -<br/> skoncentrowana dawka</h3>
           <div class="border-line"></div>
           <p class="preparation-paragraph">
-            <strong class="fontSize-20 fontWeight-normal">Tylko jedna porcja dziennie.</strong>
+            <strong class="fontSize-20 fontWeight-normal fontSize-mobile">Tylko jedna porcja dziennie.</strong>
             <br/>
             To nie tylko wygoda, ale również gwarancja,<br/> że Twoje zwierzę otrzymuje wszystko, czego<br/> potrzebuje,
             aby
@@ -172,12 +176,12 @@
           </p>
           <div class="position-relative border">
             <picture class="position-absolute syringe-vector-left no-margin">
-              <source srcset="./img/big-vector-left.svg" media="(max-width: 992px)">
+              <source srcset="./img/mobile-vector-left.svg" media="(max-width: 992px)">
               <source srcset="./img/syringe-vector-left.svg">
               <img class="vector-img" src="./img/syringe-vector-left.svg" alt="syringe-vector-left"/>
             </picture>
             <picture class="position-absolute syringe-vector-right no-margin">
-              <source srcset="./img/big-vector-right.svg" media="(max-width: 992px)">
+              <source srcset="./img/mobile-vector-right.svg" media="(max-width: 992px)">
               <source srcset="./img/syringe-vector-right.svg">
               <img class="vector-img" src="./img/syringe-vector-right.svg" alt="syringe-vector-right"/>
             </picture>
@@ -187,7 +191,7 @@
           </div>
         </div>
         <div class="container container-column container-column-center only-mobile">
-          <h3 class="preparation-subtitle no-margin">Działanie preparatu</h3>
+          <h3 class="preparation-subtitle no-margin text-gradient">Działanie preparatu</h3>
           <div class="border-line"></div>
           <div class="container container-column action-preparation">
             <div class="container alignItems-center gap-10">
@@ -226,13 +230,13 @@
   </section>
   <section id='composition'>
     <div class="container container-column-center container-column margin-section">
-      <div class="position-relative">
-        <h3 class="composition-title">Skład w 5 ml</h3>
+      <div class="position-relative width100">
+        <h3 class="composition-title text-gradient">Skład w 5 ml</h3>
         <figure class="position-absolute composition-vector-left no-margin">
-          <img class="composition-vector-img" src="./img/big-vector-left.svg" alt="syringe-vector-left"/>
+          <img class="composition-vector-img" src="./img/mobile-vector-left.svg" alt="syringe-vector-left"/>
         </figure>
         <figure class="position-absolute composition-vector-right no-margin">
-          <img class="composition-vector-img" src="./img/big-vector-right.svg" alt="syringe-vector-right"/>
+          <img class="composition-vector-img" src="./img/mobile-vector-right.svg" alt="syringe-vector-right"/>
         </figure>
       </div>
       <div class="border-line"></div>
@@ -257,14 +261,14 @@
             <figure class="composition-rwd">
               <img src="./img/composition_2.svg" alt="composition_2"/>
             </figure>
-            <div class="position-relative">
+            <div class="position-relative width100">
               <h3 class="fontSize-31 composition-paragraph-title border">Siarczan chondroityny <br/><span>300 mg</span>
               </h3>
               <figure class="position-absolute composition-vector-left no-margin">
-                <img class="composition-vector-img" src="./img/big-vector-left.svg" alt="syringe-vector-left"/>
+                <img class="composition-vector-img" src="./img/mobile-vector-left.svg" alt="syringe-vector-left"/>
               </figure>
               <figure class="position-absolute composition-vector-right no-margin small">
-                <img class="composition-vector-img" src="./img/big-vector-right.svg" alt="syringe-vector-right"/>
+                <img class="composition-vector-img" src="./img/mobile-vector-right.svg" alt="syringe-vector-right"/>
               </figure>
             </div>
             <p class="fontSize-20 text-center composition-paragraph">Chondroityna, podobnie jak glukozamina, jest
@@ -302,13 +306,13 @@
             <figure class="composition-rwd">
               <img src="./img/composition_4.svg" alt="composition_4"/>
             </figure>
-            <div class="position-relative">
+            <div class="position-relative width100">
               <h3 class="fontSize-31 composition-paragraph-title border">Czarci Pazur <br/><span>250 mg</span></h3>
               <figure class="position-absolute composition-vector-left no-margin">
-                <img class="composition-vector-img" src="./img/big-vector-left.svg" alt="syringe-vector-left"/>
+                <img class="composition-vector-img" src="./img/mobile-vector-left.svg" alt="syringe-vector-left"/>
               </figure>
               <figure class="position-absolute composition-vector-right no-margin">
-                <img class="composition-vector-img" src="./img/big-vector-right.svg" alt="syringe-vector-right"/>
+                <img class="composition-vector-img" src="./img/mobile-vector-right.svg" alt="syringe-vector-right"/>
               </figure>
             </div>
             <p class="fontSize-20 text-center composition-paragraph">Glukozamina jest naturalnym składnikiem chrząstki.
@@ -334,13 +338,13 @@
             <figure class="composition-rwd">
               <img src="./img/composition_6.svg" alt="composition_6"/>
             </figure>
-            <div class="position-relative">
+            <div class="position-relative width100">
               <h3 class="fontSize-31 composition-paragraph-title border">MSM <br/><span>250 mg</span></h3>
               <figure class="position-absolute composition-vector-left no-margin">
-                <img class="composition-vector-img" src="./img/big-vector-left.svg" alt="syringe-vector-left"/>
+                <img class="composition-vector-img" src="./img/mobile-vector-left.svg" alt="syringe-vector-left"/>
               </figure>
               <figure class="position-absolute composition-vector-right no-margin">
-                <img class="composition-vector-img" src="./img/big-vector-right.svg" alt="syringe-vector-right"/>
+                <img class="composition-vector-img" src="./img/mobile-vector-right.svg" alt="syringe-vector-right"/>
               </figure>
             </div>
             <p class="fontSize-20 text-center composition-paragraph">Metylosulfonylometan, czyli MSM, to naturalny
