change hamburger style - mobile

--- a/index.html
+++ b/index.html
@@ -41,11 +41,6 @@
       </figure>
     </a>
   </div>
-  <div class="only-mobile">
-    <figure class="no-margin">
-      <img class="mobile-menu" src="./img/hamburger.svg" alt="hamburger"/>
-    </figure>
-  </div>
   <ul class="menu-section">
     <li class="menu-tab">
       <a href="#preparation">Co nas wyróżnia</a>
@@ -58,6 +53,11 @@
     </li>
   </ul>
 </nav>
+<div class="only-mobile-menu">
+  <figure class="no-margin">
+    <img class="mobile-menu" src="./img/hamburger.svg" alt="hamburger"/>
+  </figure>
+</div>
 <main>
   <div class="section-background">
     <div class="position-relative">
