change hamburger style - mobile

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             szczególnie
             korzystne dla<br/> zwierząt z poważnymi problemami stawowymi.
           </p>
-          <div class="position-relative border">
+          <div class="position-relative border width100 mobile-center">
             <picture class="position-absolute flower-vector-left no-margin">
               <source srcset="./img/mobile-vector-left.svg" media="(max-width: 992px)">
               <source srcset="./img/flower-vector-left.svg">
@@ -146,7 +146,7 @@
               <p class="preparation-paragraph no-margin circle-paragraph">Zmieszany z karmą</p>
             </div>
           </div>
-          <div class="position-relative border" style="margin-top: 36px">
+          <div class="position-relative border width100 mobile-center" style="margin-top: 36px">
             <picture class="position-absolute pets-vector-left no-margin">
               <source srcset="./img/mobile-vector-left.svg" media="(max-width: 992px)">
               <source srcset="./img/pets-vector-left.svg">
@@ -174,7 +174,7 @@
             życia
             swojego zwierzęcia.
           </p>
-          <div class="position-relative border">
+          <div class="position-relative border width100 mobile-center">
             <picture class="position-absolute syringe-vector-left no-margin">
               <source srcset="./img/mobile-vector-left.svg" media="(max-width: 992px)">
               <source srcset="./img/syringe-vector-left.svg">
