fix style, js and html

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
   <div class="section-background">
     <div class="position-relative">
       <div class="first-section-padding margin-section">
-        <div class="container gap-100 container-center flex-wrap hero-container">
+        <div class="container gap-100 container-center flex-wrap-bottle-section hero-container">
           <div class="container">
             <figure class="no-margin">
-              <img class="bottle-img" src="./img/group-18.svg" alt="image"/>
+              <img class="big-bottle-img" src="./img/group-18.svg" alt="image"/>
             </figure>
           </div>
           <div class="container section-detail">
@@ -196,32 +196,32 @@
           <div class="container container-column action-preparation">
             <div class="container alignItems-center gap-10">
               <div class="circle">1</div>
-              <p class="preparation-paragraph no-margin circle-paragraph">Wsparcie rozwoju chrząstki stawowej</p>
+              <p class="preparation-paragraph-mobile no-margin circle-paragraph">Wsparcie rozwoju chrząstki stawowej</p>
             </div>
             <div class="container alignItems-center gap-10">
               <div class="circle">2</div>
-              <p class="preparation-paragraph no-margin circle-paragraph">Działanie chondroprotekcyjne</p>
+              <p class="preparation-paragraph-mobile no-margin circle-paragraph">Działanie chondroprotekcyjne</p>
             </div>
             <div class="container alignItems-center gap-10">
               <div class="circle">3</div>
-              <p class="preparation-paragraph no-margin circle-paragraph">Zmniejszenie stanu zapalnego i bólu</p>
+              <p class="preparation-paragraph-mobile no-margin circle-paragraph">Zmniejszenie stanu zapalnego i bólu</p>
             </div>
             <div class="container alignItems-center gap-10">
               <div class="circle">4</div>
-              <p class="preparation-paragraph no-margin circle-paragraph">Wzmocnienie stawów</p>
+              <p class="preparation-paragraph-mobile no-margin circle-paragraph">Wzmocnienie stawów</p>
             </div>
             <div class="container alignItems-center gap-10">
               <div class="circle">5</div>
-              <p class="preparation-paragraph no-margin circle-paragraph">Ochrona przed mikrourazami</p>
+              <p class="preparation-paragraph-mobile no-margin circle-paragraph">Ochrona przed mikrourazami</p>
             </div>
             <div class="container alignItems-center gap-10">
               <div class="circle">6</div>
-              <p class="preparation-paragraph no-margin circle-paragraph">Regeneracja po urazach i zabiegach
+              <p class="preparation-paragraph-mobile no-margin circle-paragraph">Regeneracja po urazach i zabiegach
                 ortopedycznych</p>
             </div>
             <div class="container alignItems-center gap-10">
               <div class="circle">7</div>
-              <p class="preparation-paragraph no-margin circle-paragraph">Poprawa jakości życia</p>
+              <p class="preparation-paragraph-mobile no-margin circle-paragraph">Poprawa jakości życia</p>
             </div>
           </div>
         </div>
@@ -232,15 +232,16 @@
     <div class="container container-column-center container-column margin-section">
       <div class="position-relative width100">
         <h3 class="composition-title text-gradient">Skład w 5 ml</h3>
-        <figure class="position-absolute composition-vector-left no-margin">
+          <figure class="position-absolute composition-vector-left-title no-margin">
           <img class="composition-vector-img" src="./img/mobile-vector-left.svg" alt="syringe-vector-left"/>
         </figure>
-        <figure class="position-absolute composition-vector-right no-margin">
+        <figure class="position-absolute composition-vector-right-title no-margin">
           <img class="composition-vector-img" src="./img/mobile-vector-right.svg" alt="syringe-vector-right"/>
         </figure>
       </div>
       <div class="border-line"></div>
       <h3 class="composition-subtitle">Co dają poszczególne składniki:</h3>
+      <div class="border-line-composition-subtitle"></div>
       <div class="container margin-composition flex-wrap-bottle-section">
         <div class="container container-column alignItems-center composition jc-space-between">
           <div class="container container-column alignItems-center">
